@@ -220,12 +220,16 @@ berserk_cancels_buffs: no
 max_heal: 9999
 max_heal_lv: 11
 
-// Emergency Recall Guild Skill setting.
-// 0: Skill is disabled, can't be used anywhere.
-// 1: Skill fails when used on "nowarpto" maps
-//    (note that by default all GVG maps are nowarpto)
-// 2: Skill is usable everywhere.
-emergency_call: 2
+// Emergency Recall Guild Skill setting (add as appropiate).
+// Note that for the skill to be usable at all, 
+// you need at least one of 1/2 and 4/8
+// 1: Skill is usable outside of woe.
+// 2: Skill is usable during woe.
+// 4: Skill is usable outside of GvG grounds
+// 8: Skill is usable on GvG grounds
+//16: Disable skill from "nowarpto" maps
+//    (note that by default all Castles have the nowarpto flag)
+emergency_call: 15
 
 // Max Possible Level of Monster skills
 // Note: If your MVPs are too tough, reduce it to 10.
